compiler/testData/diagnostics/tests/inline/inlineCallsPrivateInline.diag.txt
/inlineCallsPrivateInline.kt:4:9: error: public-API inline function cannot access non-public-API 'private final inline fun localDeclarations(): Boolean defined in AAA'
        localDeclarations()
        ^^^^^^^^^^^^^^^^^
/inlineCallsPrivateInline.kt:5:9: error: public-API inline function cannot access non-public-API 'private final val privatePropInline: Int defined in AAA'
        privatePropInline
        ^^^^^^^^^^^^^^^^^
/inlineCallsPrivateInline.kt:6:9: error: public-API inline function cannot access non-public-API 'private final var privateVarPropInline: String defined in AAA'
        privateVarPropInline = ""
        ^^^^^^^^^^^^^^^^^^^^
/inlineCallsPrivateInline.kt:6:9: error: public-API inline function cannot access non-public-API 'private final inline fun `<set-privateVarPropInline>`(value: String): Unit defined in AAA'
        privateVarPropInline = ""
        ^^^^^^^^^^^^^^^^^^^^

